--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -7,6 +7,7 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
     
     {% block head %}{% endblock %}
 </head>
@@ -20,6 +21,7 @@
             
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="{{ url_for('athletes.index') }}">Athletes</a>
+                <a class="nav-link" href="{{ url_for('main.rankings') }}">Rankings</a>
                 {% if current_user.is_authenticated %}
                 <a class="nav-link" href="{{ url_for('main.dashboard') }}">Dashboard</a>
                 <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
